bugfix overflow index.html

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,10 @@
     font-family: 'Roboto Mono', monospace;
     color: #fff;
 }
+body{
+    width: 100vw;
+    overflow: hidden;
+}
 .contato{
     display: flex;
     width: 100%;
@@ -62,6 +66,7 @@ main{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    width: 100%;
     height: 100vh;
     background: linear-gradient(#0084d1, #c9ecff);
     overflow: hidden;
@@ -94,6 +99,7 @@ h1{
     width: 80px;
     height: 80px;
     animation: pipeAnimation 3s infinite linear;
+
 }
 .clouds{
     position: absolute;
